--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ color: red;
 </head>
 <body>
     <p>
-        <span class="js">javascript</span> is
+        <span class="js">SoSE</span> is
         <span class="typed-text"></span>
         <span class="cursor">|</span>
     </p>
     <script>
         const typetext = document.querySelector(".typed-text")
 const cursor = document.querySelector(".cursor")
-const words = ["amazinng" , "gud" , "ok"] 
+const words = ["ughhh" , "chii" , "aaa thuuu"] 
 const typingdelay= 100
 const erasingdelay = 50 
 const newletterdelay = 500
